<resources>
    <string name="app_name">KotEye</string>


    <string name="empty_view">暂无数据哦</string>
    <string name="error_view_hint">加载失败</string>
    <string name="no_network_view_hint">网络异常</string>


    <string name="video_offline">缓存</string>
    <string name="video_attention">+ 关注</string>
    <string name="video_end"> - The End-</string>

    <string name="category_title">全部分类</string>
    <string name="hot_title">人气榜</string>
    <string name="about">关于</string>

    <string name="search_transition_name">transition_reveal</string>
    <string name="search_hint_text">帮你找到感兴趣的视频</string>
    <string name="search_title_tip">输入标题或描述中的关键词找到更多视频</string>
    <string name="search_hot_keywords_tip">- 热门搜索词 -</string>
    <string name="search_result_count">-「%1$s」搜索结果共%2$d个-</string>


    <string name="cancel">取消</string>

    <string name="nickname">Xiho</string>
    <string name="view_homepage">查看个人主页 ></string>

    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_attention">我的关注</string>
    <string name="mine_cache">我的缓存</string>
    <string name="view_history">观看记录</string>
    <string name="feedback">意见反馈</string>



    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败(ㄒoㄒ)~~</string>
    <string name="empty_view_hint">暂时木有内容呀~~</string>
    <string name="splash_text">每日精选视频，让你大开眼界</string>


    <string name="copy_right_notice">内容部分数据归原公司《开眼Eyepetizer》版权所有</string>
    <string name="not_use_commercial">本APP只供学习交流和研究之用，\n请勿用作商业用途！</string>
    <string name="since">copyright ©2017 Xiho.</string>
    <string name="gitHub">GitHub</string>
    <string name="phone_state">手机状态</string>
    <string name="phone_storage">存储空间</string>
    <string name="honey">亲爱的</string>
    <string name="please_open_permission">为了能正常使用，请开启这些权限吧</string>
    <string name="init_ok">初始化完毕！</string>
    <string name="permission_closed">用户关闭了权限</string>
    <string name="card_string">CoordinatorLayout功能如此强大，而他的神奇之处在于Behavior对象，CoordinatorLayout自己并不控制View，所有的控制权都在Behavior。前面写到了FloatingActionButton.Behavior，AppBarLayout.Behavior, AppBarLayout.ScrollingViewBehavior。 AppBarLayout中有两个Behavior，一个是拿来给它自己用的，另一个是拿来给它的兄弟结点用的。这些Behavior实现了复杂的控制功能。系统的Behavior毕竟有限，我们可以通过自定义的方式来实现自己的Behavior。</string>
    <string name="master">master</string>
    <string name="check_information"><![CDATA[查看个人主页>]]></string>

</resources>
