<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_marginBottom="@dimen/bottom_tab_height">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@mipmap/profile_bg"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                app:layout_collapseMode="pin"
                app:layout_collapseParallaxMultiplier="0.7">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/head_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="60dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher"
                    app:border_color="@android:color/white"
                    app:border_width="2dp"
                    />
                <TextView
                    android:id="@+id/nick_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLength="24"
                    android:text="@string/master"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/sign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/check_information"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:visibility="visible"/>


            </LinearLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <RelativeLayout
                    android:id="@+id/rel_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_about"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="20dp"
                        android:src="@mipmap/ic_about"
                        tools:ignore="RtlCompat" />

                </RelativeLayout>
            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_collection"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawablePadding="7dp"
                        android:drawableStart="@mipmap/ic_action_collection"
                        android:gravity="center"
                        android:text="@string/collection"
                        tools:ignore="RtlCompat" />
                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/color_gray" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:drawablePadding="7dp"
                        android:drawableStart="@mipmap/ic_action_comment"
                        android:gravity="center"
                        android:text="@string/comment"
                        tools:ignore="RtlCompat" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_mine_message"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center|center_horizontal"
                    android:text="@string/mine_message"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_mine_attention"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center|center_horizontal"
                    android:text="@string/mine_attention"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_mine_cache"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center|center_horizontal"
                    android:text="@string/mine_cache"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_watch_history"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center|center_horizontal"
                    android:text="@string/view_history"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center|center_horizontal"
                    android:text="@string/feedback"
                    android:textSize="14sp" />
            </LinearLayout>



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>